Changed folder structure and angular build settings

--- a/Nano-Paste/Nano-Paste-MVC/Nano-Paste-MVC.csproj
+++ b/Nano-Paste/Nano-Paste-MVC/Nano-Paste-MVC.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>Nano_Paste_MVC</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
