checking in changes still needs work

--- a/Nano-Paste/Nano-Paste-MVC/Nano-Paste-MVC.csproj
+++ b/Nano-Paste/Nano-Paste-MVC/Nano-Paste-MVC.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>Nano_Paste_MVC</RootNamespace>
+    <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
   </PropertyGroup>
 
   <ItemGroup>
